# mhacks2024

./: .gitignore  pyproject.toml  temp.json  temp.py
backend/: .env  Dockerfile  README.dataset.txt  cv.py  image_input.txt  main.py  poker.py  preflop_ev.csv  pyproject.toml  test.py
backend/algorithms/: algos.py
backend/eval7/: eval7test.ipynb
backend/pokerface/: pyvenv.cfg
poker-face/: app.json  package-lock.json  package.json  payload.json  tailwind.config.js
poker-face/app/: +not-found.tsx  _layout.tsx  index.tsx
poker-face/app/(tabs)/: Gameplay.tsx  Metric.tsx  _layout.tsx  index.tsx
poker-face/components/: ActionDisplay.tsx  CardView.tsx
poker-face/constants/: Colors.ts
