[tool.poetry]
name = "mhacks2024"
version = "0.1.0"
description = ""
authors = ["Om Joshi <39465356+backpack455@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
httpx = "^0.27.2"
opencv-python = "^4.10.0.84"
python-multipart = "^0.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
